Implement add and remove quiz participant
