# app/Http/Controllers/Api/QuizParticipantController.php
@@ -3,12 +3,14 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Http\Requests\AddQuizParticipantRequest;
 use App\Http\Resources\ParticipantCollection;
 use App\Models\Participant;
 use App\Models\Quiz;
 use App\Services\QuizParticipantService;
 use App\Services\QuizService;
 use Illuminate\Auth\Access\AuthorizationException;
+use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 
 class QuizParticipantController extends Controller
@@ -33,13 +35,47 @@ class QuizParticipantController extends Controller
         return new ParticipantCollection($participants);
     }
 
-    public function store(Quiz $quiz, Request $request)
+    /**
+     * @throws AuthorizationException
+     */
+    public function store(Quiz $quiz, AddQuizParticipantRequest $request): JsonResponse
     {
+        $this->authorize('update', $quiz);
 
+        $validated = $request->validated();
+
+        $this->quizParticipantService->add($quiz, $validated['participantId']);
+
+        return response()->json([
+            'message' => __('message.success_attaching', [
+                'resourceA' => 'Participant',
+                'resourceB' => 'Quiz',
+            ]),
+            'data' => [
+                'quizId' => $quiz->id,
+                'participantId' => $validated['participantId'],
+            ]
+        ]);
     }
 
-    public function destroy(Quiz $quiz, Participant $participant)
+    /**
+     * @throws AuthorizationException
+     */
+    public function destroy(Quiz $quiz, string $participantId): JsonResponse
     {
-        //
+        $this->authorize('update', $quiz);
+
+        $this->quizParticipantService->remove($quiz, $participantId);
+
+        return response()->json([
+            'message' => __('message.success_detaching', [
+                'resourceA' => 'Participant',
+                'resourceB' => 'Quiz',
+            ]),
+            'data' => [
+                'quizId' => $quiz->id,
+                'participantId' => $participantId,
+            ]
+        ]);
     }
 }
